--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 
 
     <dependency>
+	  <groupId>org.immregistries</groupId>
+	  <artifactId>dqa-hl7-utility</artifactId>
+	  <version>2.0.2-DEVELOPMENT</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
       <version>${jetty.version}</version>
