--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,17 @@
     <servlet-name>pop</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.PopServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>vacDedup</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.VacDedupServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>pop</servlet-name>
     <url-pattern>pop</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>vacDedup</servlet-name>
+    <url-pattern>vacDedup</url-pattern>
   </servlet-mapping>
 
 
