--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.immregistries</groupId>
-  <artifactId>iis-kernal-poc</artifactId>
+  <artifactId>iis-kernel-poc</artifactId>
   <version>0.1</version>
   <packaging>war</packaging>
 
-  <name>Immunization Information System Kernal - Proof of Concept</name>
+  <name>Immunization Information System Kernel - Proof of Concept</name>
   <url>http://imregistries.org</url>
 
   <licenses>
@@ -36,7 +36,7 @@
     <dependency>
 	  <groupId>org.immregistries</groupId>
 	  <artifactId>dqa-hl7-utility</artifactId>
-	  <version>2.0.2-DEVELOPMENT</version>
+	  <version>2018.5-BETA</version>
     </dependency>
 
 
@@ -68,8 +68,8 @@
 
     <dependency>
       <groupId>org.immregistries.vaccination_deduplication</groupId>
-      <artifactId>api</artifactId>
-      <version>0.1</version>
+      <artifactId>vaccination-deduplication-api</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
 
 
@@ -133,6 +133,7 @@
   </dependencies>
 
   <build>
+    <finalName>iis-kernel</finalName>
     <resources>
       <resource>
         <filtering>false</filtering>
