--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
     <servlet-class>org.immregistries.iis.kernal.servlet.PopServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>fits</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.FitsServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>status</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.StatusServlet</servlet-class>
   </servlet>
@@ -31,6 +35,10 @@
   <servlet-mapping>
     <servlet-name>soap</servlet-name>
     <url-pattern>/soap</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>fits</servlet-name>
+    <url-pattern>/fits</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>vacDedup</servlet-name>
