--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 
 		<dependency>
 			<groupId>org.immregistries</groupId>
-			<artifactId>dqa-hl7-utility</artifactId>
-			<version>2018.5-BETA</version>
+			<artifactId>mqe-hl7-utility</artifactId>
+			<version>2018.12-BETA</version>
 		</dependency>
 
 
@@ -63,8 +63,8 @@
 
 		<dependency>
 			<groupId>org.immregistries</groupId>
-			<artifactId>dqa-codebase-client</artifactId>
-			<version>2.1</version>
+			<artifactId>codebase-client</artifactId>
+			<version>2.3</version>
 		</dependency>
 
 		<dependency>
