--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.immregistries</groupId>
-	<artifactId>iis-kernel-poc</artifactId>
-	<version>0.1</version>
+	<artifactId>iis-sandbox</artifactId>
+	<version>0.2</version>
 	<packaging>war</packaging>
 
 	<name>Immunization Information System Kernel - Proof of Concept</name>
@@ -75,9 +75,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.tch.fc</groupId>
+			<groupId>org.immregistries.vfa</groupId>
 			<artifactId>ForecastConnector</artifactId>
-			<version>3.12</version>
+			<version>3.15</version>
 		</dependency>
 
 		<dependency>
@@ -143,11 +143,27 @@
 		</dependency>
 
 
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.2.11</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.2.11</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.2.11</version>
+    </dependency>
+
 
 	</dependencies>
 
 	<build>
-		<finalName>iis-kernel</finalName>
+		<finalName>iis-sandbox</finalName>
 		<resources>
 			<resource>
 				<filtering>false</filtering>
