--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ bin/
 
 .settings/org.eclipse.core.resources.prefs
 src/database/.~lock.ERD v0.1.odg#
+.settings/org.springframework.ide.eclipse.prefs
