--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,10 @@
   </welcome-file-list>
 
   <servlet>
+    <servlet-name>v2ToFhir</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.V2ToFhirServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>pop</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.PopServlet</servlet-class>
   </servlet>
@@ -55,6 +59,10 @@
   <servlet-mapping>
     <servlet-name>message</servlet-name>
     <url-pattern>/message</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>v2ToFhir</servlet-name>
+    <url-pattern>/v2ToFhir</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>pop</servlet-name>
