Adding support for exporting COVID-19 export

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,10 @@
     <servlet-class>org.immregistries.iis.kernal.servlet.LabServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>covid</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.CovidServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>message</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.MessageServlet</servlet-class>
   </servlet>
@@ -55,6 +59,10 @@
   <servlet-mapping>
     <servlet-name>lab</servlet-name>
     <url-pattern>/lab</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>covid</servlet-name>
+    <url-pattern>/covid</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>message</servlet-name>
