webservlet annotion resolved , needed to javax-servlet.api

--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,13 @@
 			<version>${hapi.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
