Added FHIR Test servlet

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
     <servlet-class>org.immregistries.iis.kernal.servlet.V2ToFhirServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>fhirTest</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.FhirTestServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>pop</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.PopServlet</servlet-class>
   </servlet>
@@ -87,6 +91,10 @@
   <servlet-mapping>
     <servlet-name>v2ToFhir</servlet-name>
     <url-pattern>/v2ToFhir</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>fhirTest</servlet-name>
+    <url-pattern>/fhirTest</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>pop</servlet-name>
