--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,10 @@
     <servlet-class>org.immregistries.iis.kernal.servlet.QueryConverterServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>vciDemo</servlet-name>
+    <servlet-class>org.immregistries.iis.kernal.servlet.VciServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>event</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.EventServlet</servlet-class>
   </servlet>
@@ -107,6 +111,10 @@
   <servlet-mapping>
     <servlet-name>queryConverter</servlet-name>
     <url-pattern>/queryConverter</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>vciDemo</servlet-name>
+    <url-pattern>/vciDemo</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>event</servlet-name>
