--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.immregistries</groupId>
 			<artifactId>mqe-hl7-utility</artifactId>
-			<version>2020.12-BETA</version>
+			<version>2021.7-BETA</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>org.immregistries.vfa</groupId>
 			<artifactId>ForecastConnector</artifactId>
-			<version>3.19</version>
+			<version>3.20.2</version>
 		</dependency>
 
 		<dependency>
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.16</version>
+			<version>8.0.28</version>
 		</dependency>
 
 		<dependency>
@@ -200,8 +200,13 @@
         <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
-          <version>2.10.0</version>
+          <version>2.13.1</version>
         </dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 
 	</dependencies>
 
