--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -73,6 +73,10 @@
     <servlet-class>org.immregistries.iis.kernal.servlet.SoapServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>wsdl-demo</servlet-name>
+    <servlet-class>org.immregistries.smm.mover.WSDLDemoServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>vacDedup</servlet-name>
     <servlet-class>org.immregistries.iis.kernal.servlet.VacDedupServlet</servlet-class>
   </servlet>
@@ -131,6 +135,10 @@
   <servlet-mapping>
     <servlet-name>soap</servlet-name>
     <url-pattern>/soap</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>wsdl-demo</servlet-name>
+    <url-pattern>/wsdl-demo/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>fits</servlet-name>
