--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<slf4j.version>1.6.2</slf4j.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<hapi.version>5.0.0</hapi.version>
+		<hapi.version>5.7.2</hapi.version>
 	</properties>
 
 	<dependencies>
@@ -177,6 +177,11 @@
 			<groupId>ca.uhn.hapi</groupId>
 			<artifactId>hapi-base</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-client</artifactId>
+			<version>${hapi.version}</version>
 		</dependency>
 
 		<dependency>
