--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,12 @@
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.10</version>
+			<!--			<scope>provided</scope>-->
+		</dependency>
 
 		<dependency>
 			<groupId>javassist</groupId>
