--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <version>6.0.1</version>
     </parent>
 
-    <artifactId>hapi-fhir-jpaserver-starter</artifactId>
+    <artifactId>iis-sandbox</artifactId>
 
     <properties>
         <java.version>11</java.version>
@@ -29,7 +29,7 @@
 
     <packaging>war</packaging>
 
-    <name>HAPI FHIR JPA Server - Starter Project</name>
+    <name>HAPI FHIR JPA IIS Sandbox</name>
 
     <repositories>
         <repository>
@@ -43,6 +43,60 @@
 
 
     <dependencies>
+    <!-- IIS Sandbox dependencies -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immregistries</groupId>
+            <artifactId>smm-tester</artifactId>
+            <version>2.31.0</version>
+            <classifier>client</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immregistries.vfa</groupId>
+            <artifactId>ForecastConnector</artifactId>
+            <version>3.20.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immregistries.vaccination_deduplication</groupId>
+            <artifactId>vaccination-deduplication-api</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immregistries</groupId>
+            <artifactId>mqe-hl7-utility</artifactId>
+            <version>2021.7-BETA</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--HAPI FHIR JPA Dependency-->
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-api</artifactId>
