authentication old system integrated

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
                     <groupId>javax.servlet</groupId>
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.sun.xml.bind</groupId>
+                    <artifactId>jaxb-core</artifactId>
+                </exclusion>
+<!--                <exclusion>-->
+<!--                    <groupId>com.sun.xml.bind</groupId>-->
+<!--                    <artifactId>jaxb-impl</artifactId>-->
+<!--                </exclusion>-->
             </exclusions>
         </dependency>
 
@@ -602,6 +610,22 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**</include>
+                </includes>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 
     <profiles>
