--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -145,9 +145,9 @@ hapi:
     #    reuse_cached_search_results_millis: 60000
     tester:
       home:
-        id: home
+#        id: home
         name: Local Tester
-        server_address: 'http://localhost:8080/fhir'
+        server_address: 'http://localhost:8080/fhir/DEFAULT'
         refuse_to_fetch_third_party_urls: false
         fhir_version: R5
 #      global:
