add subscription tools and topic

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -160,9 +160,9 @@ hapi:
 #      responses_enabled: true
 #    binary_storage_enabled: true
 #    bulk_export_enabled: true
-#    subscription:
-#      resthook_enabled: true
-#      websocket_enabled: false
+    subscription:
+      resthook_enabled: true
+      websocket_enabled: false
 #      email:
 #        from: some@test.com
 #        host: google.com
