--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     <parent>
         <groupId>ca.uhn.hapi.fhir</groupId>
         <artifactId>hapi-fhir</artifactId>
-        <version>6.0.3</version>
+<!--        <version>6.0.1</version>-->
+        <version>6.0.1-CUSTOM-SUBSCRIPTION</version>
     </parent>
 
     <artifactId>iis-sandbox</artifactId>
