new Id mechanics using jpa ids now, many fixes on subscription Topic and subscription

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ management:
       exposure:
         include: "health,prometheus"
 spring:
+#  output:
+#    ansi:
+#      enabled: ALWAYS
   main:
     allow-circular-references: true
     #allow-bean-definition-overriding: true
