--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -93,7 +93,7 @@ hapi:
     #    default_page_size: 20
     #    delete_expunge_enabled: true
     #    enable_repository_validating_interceptor: false
-    #    enable_index_missing_fields: false
+    enable_index_missing_fields: true
     #    enable_index_of_type: true
     #    enable_index_contained_resource: false
     ###  !!Extended Lucene/Elasticsearch Indexing is still a experimental feature, expect some features (e.g. _total=accurate) to not work as expected!!
