simplification for partition creation, accurate system url for cvx and mvx, Hapi version name shortened for readability

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <groupId>ca.uhn.hapi.fhir</groupId>
         <artifactId>hapi-fhir</artifactId>
 <!--        <version>6.0.1</version>-->
-        <version>6.0.1-CUSTOM-SUBSCRIPTION</version>
+        <version>6.0.1-SUB</version>
     </parent>
 
     <artifactId>iis-sandbox</artifactId>
