remove redis session management

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,15 +6,15 @@ management:
       exposure:
         include: "health,prometheus"
 spring:
-  session:
-    store-type:  # Session store type.
-      redis:
-        flush-mode: on-save
-        namespace: spring:session
-  redis:
-    host: localhost
-    password:
-    port: 6379
+#  session:
+#    store-type:  # Session store type.
+#      redis:
+#        flush-mode: on-save
+#        namespace: spring:session
+#  redis:
+#    host: localhost
+#    password:
+#    port: 6379
 
   main:
     allow-circular-references: true
