--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,9 @@ management:
     web:
       exposure:
         include: "health,prometheus"
+server:
+  servlet:
+    contextPath: "/iis-jpa"
 spring:
 #  session:
 #    store-type:  # Session store type.
@@ -157,7 +160,7 @@ hapi:
       home:
 #        id: home
         name: Local Tester
-        server_address: 'http://localhost:8080/fhir/DEFAULT'
+        server_address: 'http://localhost:8080/iis-jpa/fhir/overlay-test'
         refuse_to_fetch_third_party_urls: false
         fhir_version: R5
 #      global:
