--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -156,13 +156,13 @@ hapi:
     #    max_page_size: 200
     #    retain_cached_searches_mins: 60
     #    reuse_cached_search_results_millis: 60000
-    tester:
-      home:
-#        id: home
-        name: Local Tester
-        server_address: 'http://localhost:8080/iis-jpa/fhir/overlay-test'
-        refuse_to_fetch_third_party_urls: false
-        fhir_version: R5
+#    tester:
+#      home:
+##        id: home
+#        name: Local Tester
+#        server_address: 'http://localhost:8080/iis-jpa/fhir/overlay-test'
+#        refuse_to_fetch_third_party_urls: false
+#        fhir_version: R5
 #      global:
 #        name: Global Tester
 #        server_address: "http://hapi.fhir.org/baseR5"
