--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -158,15 +158,26 @@ hapi:
 #      global:
 #        name: Global Tester
 #        server_address: "http://hapi.fhir.org/baseR5"
-#        refuse_to_fetch_third_party_urls: false
-#        fhir_version: R5
-#    validation:
-#      requests_enabled: true
-#      responses_enabled: true
-#    binary_storage_enabled: true
-#    bulk_export_enabled: true
+    #        refuse_to_fetch_third_party_urls: false
+    #        fhir_version: R5
+    #    validation:
+    #      requests_enabled: true
+    #      responses_enabled: true
+    #    binary_storage_enabled: true
+    #    bulk_export_enabled: true
     subscription:
       resthook_enabled: true
+    #     comma-separated package names, will be @ComponentScan'ed by Spring to allow for creating custom Spring beans
+    custom-bean-packages: ca.uhn.fhir.jpa.starter.interceptors
+
+    # comma-separated list of fully qualified interceptor classes.
+    # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages',
+    # or will be instantiated via reflection using an no-arg contructor; then registered with the server
+    custom-interceptor-classes:
+      #      ca.uhn.fhir.jpa.starter.interceptors.PartitionCreationInterceptor, MADE IN SERVERCONFIG INSTEAD
+      ca.uhn.fhir.jpa.starter.interceptors.MdmCustomInterceptor,
+      ca.uhn.fhir.jpa.starter.interceptors.SessionAuthorizationInterceptor
+
 #      websocket_enabled: false
 #      email:
 #        from: some@test.com
